Do not allow multi-datastore transactions
The ability to access multiple datastores from the same transaction
has been long-deprecated. This patch disables that ability, binding
each transaction to the datastore it first accesses.

JIRA: CONTROLLER-2055
Change-Id: I57fed3daf2ae9cd0cc6f4899fe1975c05def5c46
Signed-off-by: Ruslan Kashapov <ruslan.kashapov@pantheon.tech>
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>